--- a/src/app/components/about-me/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me/about-me.component.html
@@ -1,4 +1,11 @@
 
 <div>
-  <p>about-me works!</p>
+  <p>I was born and raised where I reside currently, in Columbia, Missouri. My first experience with software development was when I was 16 years old, A sophomore in at Hickman high school.
+    I enrolled in a course called C++ Programming, where I learned some fundamentals like recursion, sorting algorithms, and of course, how to program in C++. The next year, I enrolled in
+    the class advanced C++ programming, where we took the Harvard cs50 course and got into teams and converted a boardgame into a C++ program using SFML for graphics. At this time, I thought
+    programming was interesting, but not something I would do for a career. When I started college, I started out as a political science major. When I got to my sophomore year, I thought
+    that engineering would be a better choice, so I enrolled in courses required for the electrical engineering major. One of these courses being Intro to algorithms, where I had to relearn
+    the basics in the C language. This class made me remember  how much I loved problem solving and working with computers. This pushed me to change majors to Computer Science and continue
+    and recieve my Bachelors in science in Computer Science at the University of Missouri
+  </p>
   </div>
