--- a/src/app/components/header/header/header.component.html
+++ b/src/app/components/header/header/header.component.html
@@ -1,4 +1,4 @@
 <div id="header-div">
   <h1 [@simpleFadeAnimation]="'in'">Jorden Carter-Whitbey</h1>
-  <h4>Software Developer</h4>
+  <h4 [@simpleFadeAnimation]="'in'">Software Developer</h4>
 </div>
