--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
 <div style="text-align:center">
   <app-header></app-header>
   <br><br>
-  <a routerLink="/aboutMe">About Me</a>
+  <div class="link-button">
+    <a routerLink="/aboutMe">About Me</a>
+  </div>
   <!-- <app-about-me></app-about-me> -->
 <router-outlet></router-outlet>
