--- a/src/app/components/about-me/about-me/about-me.component.sass
+++ b/src/app/components/about-me/about-me/about-me.component.sass
@@ -1,1 +1,12 @@
 @import "../../../variables.sass"
+
+p
+  font-family: 'Hind Madurai', sans-serif
+  color: $nice-red-color
+  text-align: left
+  padding: 15px
+  text-indent: 20px
+
+div
+  background-color: #2f3845
+  box-shadow: 2px 2px 2px 2px $shadow-color
