added new work section, not pretty yet though

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -16,7 +16,15 @@ a
     width: 100px
     border-radius: 20px
 
-div.link-button
+div + .link-button
   margin: 0 auto
   background-color: #2f3845
   box-shadow: 3px 3px 3px $shadow-color
+
+.button-list
+  display: flex
+  justify-content: center
+
+.button-list > div
+  margin: 10px
+  text-align: center
