--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,13 @@
 <div style="text-align:center">
   <app-header></app-header>
   <br><br>
-  <div class="link-button">
-    <a routerLink="/aboutMe">About Me</a>
+  <div class="button-list" >
+    <div class="link-button">
+      <a routerLink="/aboutMe">About Me</a>
+    </div>
+    <div class="link-button">
+      <a routerLink="/work">Work</a>
+    </div>
   </div>
   <!-- <app-about-me></app-about-me> -->
 <router-outlet></router-outlet>
