--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -3,20 +3,18 @@
 app-header
   height: 30%
 
-a
-  padding-top: 20px
-  font-family: 'Hind Madurai', sans-serif
-  color: $nice-red-color
-  text-decoration: none
-
 .link-button
     border-style: solid
     border-color: $nice-red-color
     border-width: 1px
     width: 100px
     border-radius: 20px
+    font-family: 'Hind Madurai', sans-serif
+    color: $nice-red-color
+    text-decoration: none
+    outline: none
 
-div + .link-button
+div .link-button
   margin: 0 auto
   background-color: #2f3845
   box-shadow: 3px 3px 3px $shadow-color
