--- a/src/app/components/work/work/work.component.html
+++ b/src/app/components/work/work/work.component.html
@@ -2,7 +2,7 @@
   <div class="employment">
   <table>
       <tr>
-        <td class="company">TigerAware</td><td>Software Developer</td><td>Aug 2019 - Present</td><td class="location">Columbia, Missouri</td>
+        <td class="company">TigerAware</td><td>Software Developer</td><td class="dates-worked">Aug 2019 - Present</td><td class="location">Columbia, Missouri</td>
       </tr>
         <tr class="description"><td></td><td>Aided in design and development of the android app using Java</td></tr>
         <tr class="description"><td></td><td>Aided in design and development of the user dashboard using Angularjs</td></tr>
@@ -11,37 +11,42 @@
   <div class="employment">
     <table>
         <tr>
-          <td class="company">Shelter Insurance</td><td>Software Developer II</td><td>May 2019 - Present</td><td class="location">Columbia, Missouri</td>
+          <td class="company">Shelter Insurance</td><td>Software Developer II</td><td class="dates-worked">May 2019 - Present</td><td class="location">Columbia, Missouri</td>
         </tr>
-          <tr class="description"><td></td><td>Aided in design and development of the android app using Java</td></tr>
-          <tr class="description"><td></td><td>Aided in design and development of the user dashboard using Angularjs</td></tr>
+          <tr class="description"><td></td><td>Wrote unit and integration tests to provide complete code coverage for new and existing Spring Boot applications</td></tr>
+          <tr class="description"><td></td><td>Translated business data retrieval requirements into DB2 SQL queries</td></tr>
+          <tr class="description"><td></td><td>Created stories to implement user requirements on a hybrid Scrum-Kanban agile team.</td></tr>
+          <tr class="description"><td></td><td>Mentored and created documentation to explain product functionality for junior developers</td></tr>
+          <tr class="description"><td></td><td>Used Drools to implement new business rules in existing claims processing application</td></tr>
         </table>
     </div>
     <div class="employment">
       <table>
           <tr>
-            <td class="company">Shelter Insurance</td><td>Junior Software Developer</td><td>April 2018 - May 2019</td><td class="location">Columbia, Missouri</td>
+            <td class="company">Shelter Insurance</td><td>Junior Software Developer</td><td class="dates-worked">April 2018 - May 2019</td><td class="location">Columbia, Missouri</td>
           </tr>
-            <tr class="description"><td></td><td>Aided in design and development of the android app using Java</td></tr>
-            <tr class="description"><td></td><td>Aided in design and development of the user dashboard using Angularjs</td></tr>
+            <tr class="description"><td></td><td>Designed and implemented automated acceptance tests using Selenium and Appium for policyholder Android app</td></tr>
+            <tr class="description"><td></td><td>Created Amazon Lambda functions using Cloudwatch</td></tr>
+            <tr class="description"><td></td><td>Wrote Groovy, Java, and Python scripts to aid in ETL processes</td></tr>
+            <tr class="description"><td></td><td>Developed Salesforce visual pages, triggers, and Apex classes</td></tr>
           </table>
       </div>
       <div class="employment">
         <table>
             <tr>
-              <td class="company">Shaffer & Associates</td><td>Legal Associate</td><td>Aug 2015 - April 2018</td><td class="location">Columbia, Missouri</td>
+              <td class="company">Shaffer & Associates</td><td>Legal Associate</td><td class="dates-worked">Aug 2015 - April 2018</td><td class="location">Columbia, Missouri</td>
             </tr>
-              <tr class="description"><td></td><td>Aided in design and development of the android app using Java</td></tr>
-              <tr class="description"><td></td><td>Aided in design and development of the user dashboard using Angularjs</td></tr>
+              <tr class="description"><td></td><td>Processed legal documentation and created new accounts in the system</td></tr>
+              <tr class="description"><td></td><td>Filed court documents and transcribed conversations with attorneys</td></tr>
+              <tr class="description"><td></td><td>Processed payments received from courts and employers</td></tr>
             </table>
         </div>
         <div class="employment">
           <table>
               <tr>
-                <td class="company">Hy-Vee</td><td>Cashier, Deli Clerk</td><td>Feb 2013 - April 2018</td><td class="location">Columbia, Missouri</td>
+                <td class="company">Hy-Vee</td><td>Cashier, Deli Clerk</td><td class="dates-worked">Feb 2013 - April 2018</td><td class="location">Columbia, Missouri</td>
               </tr>
-                <tr class="description"><td></td><td>Aided in design and development of the android app using Java</td></tr>
-                <tr class="description"><td></td><td>Aided in design and development of the user dashboard using Angularjs</td></tr>
+                <tr class="description"><td></td><td>Worked directly with customers and other store departments to set up catering orders</td></tr>
               </table>
           </div>
 </div>
