--- a/src/app/components/about-me/about-me/about-me.component.sass
+++ b/src/app/components/about-me/about-me/about-me.component.sass
@@ -6,7 +6,10 @@ p
   text-align: left
   padding: 15px
   text-indent: 20px
+  font-size: 20px
 
 div
   background-color: #2f3845
   box-shadow: 2px 2px 2px 2px $shadow-color
+  margin-left: 20%
+  margin-right: 20%
