--- a/src/app/components/work/work/work.component.sass
+++ b/src/app/components/work/work/work.component.sass
@@ -6,25 +6,42 @@ tr
   text-align: left
   padding: 15px
 
-div
-  background-color: #2f3845
-  box-shadow: 2px 2px 2px 2px $shadow-color
+// div
+//   background-color: #2f3845
+//   box-shadow: 2px 2px 2px 2px $shadow-color
 
 .employment
   width: 100%
   text-align: left
   margin: 4px
+  background-color: #2f3845
+  box-shadow: 2px 2px 2px 2px $shadow-color
 
 td
   font-size: 20px
-  padding: 3px 3px 3px 3px
+  padding: 10px
+  // border-width: medium
+  // border-style: solid
 
 .location
   text-align: right
+  width: 10%
+
+.dates-worked
+  text-align: right
+  width: 10%
 
 .company
   font-size: 30px
+  width: 30%
 
 .description
   column-span: all
   font-size: 10px
+  text-align: left
+  width: 100%
+  column-span: 4
+
+.main-work
+  margin-left: 20%
+  margin-right: 20%
