--- a/src/app/components/about-me/about-me/about-me.component.sass
+++ b/src/app/components/about-me/about-me/about-me.component.sass
@@ -11,5 +11,9 @@ p
 div
   background-color: #2f3845
   box-shadow: 2px 2px 2px 2px $shadow-color
-  margin-left: 20%
-  margin-right: 20%
+  @media screen and (max-width: $break-small)
+    margin-left: 0%
+    margin-right: 0%
+  @media screen and (min-width: $break-large)
+    margin-left: 20%
+    margin-right: 20%
