big style change, changed sass mostly

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -5,18 +5,19 @@ app-header
 
 .link-button
     border-style: solid
-    border-color: $nice-red-color
+    border-color: $nice-teal-color
     border-width: 1px
     width: 100px
     border-radius: 20px
     font-family: 'Hind Madurai', sans-serif
-    color: $nice-red-color
+    color: $nice-teal-color
     text-decoration: none
     outline: none
 
 div .link-button
   margin: 0 auto
   background-color: #2f3845
+  color: $white-green
   box-shadow: 3px 3px 3px $shadow-color
 
 .button-list
