--- a/src/app/components/about-me/about-me/about-me.component.sass
+++ b/src/app/components/about-me/about-me/about-me.component.sass
@@ -2,14 +2,14 @@
 
 p
   font-family: 'Hind Madurai', sans-serif
-  color: $nice-red-color
+  color: $nice-teal-color
   text-align: left
   padding: 15px
   text-indent: 20px
   font-size: 20px
 
 div
-  background-color: #2f3845
+  background-color: $tan-light
   box-shadow: 2px 2px 2px 2px $shadow-color
   @media screen and (max-width: $break-small)
     margin-left: 0%
