--- a/src/app/components/header/header/header.component.sass
+++ b/src/app/components/header/header/header.component.sass
@@ -2,7 +2,7 @@
 
 div
   border-style: solid
-  border-color: $nice-red-color
+  border-color: $nice-teal-color
   border-width: 2px
   margin-left: 10%
   margin-right: 10%
@@ -11,11 +11,11 @@ div
 h1
   letter-spacing: 5px
   font-family: 'Alfa Slab One', cursive
-  color: $nice-red-color
+  color: $nice-teal-color
   text-shadow: 3px 3px 5px $shadow-color
 
 h4
   letter-spacing: 5px
   font-family: 'Hind Madurai', sans-serif
-  color: $nice-red-color
+  color: $white-green
   text-shadow: 3px 3px 5px $shadow-color
