--- a/src/app/components/work/work/work.component.html
+++ b/src/app/components/work/work/work.component.html
@@ -1,52 +1,103 @@
 <div class="main-work">
   <div class="employment">
-  <table>
-      <tr>
-        <td class="company">TigerAware</td><td>Software Developer</td><td class="dates-worked">Aug 2019 - Present</td><td class="location">Columbia, Missouri</td>
-      </tr>
-        <tr class="description"><td></td><td>Aided in design and development of the android app using Java</td></tr>
-        <tr class="description"><td></td><td>Aided in design and development of the user dashboard using Angularjs</td></tr>
-      </table>
+      <div class="header">
+        <div class="header1">
+          <div class="company">TigerAware</div>
+          <div class="position">Software Developer</div>
+        </div>
+        <div class="header2">
+        <div class="dates-worked">Aug 2019 - Present</div><div class="location">Columbia, Missouri</div>
+        </div>
+      </div>
+      <div class="table">
+        <div class="description"><div class="data">Aided in design and development of the android app using Java</div></div>
+        <div class="description"><div class="data">Aided in design and development of the user dashboard using Angularjs</div></div>
+      </div>
   </div>
   <div class="employment">
-    <table>
-        <tr>
-          <td class="company">Shelter Insurance</td><td>Software Developer II</td><td class="dates-worked">May 2019 - Present</td><td class="location">Columbia, Missouri</td>
-        </tr>
-          <tr class="description"><td></td><td>Wrote unit and integration tests to provide complete code coverage for new and existing Spring Boot applications</td></tr>
-          <tr class="description"><td></td><td>Translated business data retrieval requirements into DB2 SQL queries</td></tr>
-          <tr class="description"><td></td><td>Created stories to implement user requirements on a hybrid Scrum-Kanban agile team.</td></tr>
-          <tr class="description"><td></td><td>Mentored and created documentation to explain product functionality for junior developers</td></tr>
-          <tr class="description"><td></td><td>Used Drools to implement new business rules in existing claims processing application</td></tr>
-        </table>
+
+        <div class="header">
+          <div class="header1">
+            <div class="company">Shelter Insurance</div>
+            <div class="position">Software Developer II </div>
+          </div>
+          <div class="header2">
+          <div class="dates-worked">May 2019 - Present</div><div class="location">Columbia, Missouri</div>
+          </div>
+        </div>
+        <div class="table">
+          <div class="description"><div></div><div class="data">Wrote unit and integration tests to provide complete code coverage for new and existing Spring Boot applications</div></div>
+          <div class="description"><div></div><div class="data">Translated business data retrieval requirements into DB2 SQL queries</div></div>
+          <div class="description"><div></div><div class="data">Created stories to implement user requirements on a hybrid Scrum-Kanban agile team.</div></div>
+          <div class="description"><div></div><div class="data">Mentored and created documentation to explain product functionality for junior developers</div></div>
+          <div class="description"><div></div><div class="data">Used Drools to implement new business rules in existing claims processing application</div></div>
+        </div>
     </div>
     <div class="employment">
-      <table>
-          <tr>
-            <td class="company">Shelter Insurance</td><td>Junior Software Developer</td><td class="dates-worked">April 2018 - May 2019</td><td class="location">Columbia, Missouri</td>
-          </tr>
-            <tr class="description"><td></td><td>Designed and implemented automated acceptance tests using Selenium and Appium for policyholder Android app</td></tr>
-            <tr class="description"><td></td><td>Created Amazon Lambda functions using Cloudwatch</td></tr>
-            <tr class="description"><td></td><td>Wrote Groovy, Java, and Python scripts to aid in ETL processes</td></tr>
-            <tr class="description"><td></td><td>Developed Salesforce visual pages, triggers, and Apex classes</td></tr>
-          </table>
+          <div class="header">
+            <div class="header1">
+              <div class="company">Shelter Insurance</div>
+              <div class="position">Junior Software Developer</div>
+            </div>
+            <div class="header2">
+            <div class="dates-worked">Apr 2019 - May - 2019</div><div class="location">Columbia, Missouri</div>
+            </div>
+          </div>
+          <div class="table">
+            <div class="description"><div></div><div class="data">Say Insurance - Customer Service Team</div></div>
+            <div class="description"><div></div><div class="data">I worked as a part time software developer on the customer service team for Say Insurance 40 hours
+               a week during school breaks and around 17 to 25 hours during the school year. I participated in an agile work environment taking part in daily scrum,
+                sprint retrospectives and sprint planning. On this team, I worked on the salesforce application, writing code in Apex and running SOQL statements.
+                Besides that, I also worked on different Spring Boot applications. We use Jira to keep track of sprint information and used Jenkins for deployments
+                 into our different environments. Once I completed a story I wrote testing plans for another member in my team to verify that my change or fix worked
+                  the way it should’ve.</div></div>
+                  <div class="description"><div></div><div class="data">Say Insurance - Business Intelligence Team</div></div>
+            <div class="description"><div></div><div class="data">I worked on the business intelligence team working with big data.
+              I primarily worked with Amazon Web Services, utilizing EC2 instances, cloudwatch, S3, lambda functions, redshift, and EMR.
+              I also used Apache Nifi to route data to different destinations and to automate reports. I also worked with Google Analytics
+              and Google Tag Manager. To grab data from various sources, I queried using HiveQL, PostgresQL, NoSQL, and SQL.</div></div>
+            <!-- <div class="description"><div></div><div class="data">Designed and implemented automated acceptance tests using Selenium and Appium for policyholder Android app</div></div>
+            <div class="description"><div></div><div class="data">Created Amazon Lambda functions using Cloudwatch</div></div>
+            <div class="description"><div></div><div class="data">Wrote Groovy, Java, and Python scripts to aid in ETL processes</div></div>
+            <div class="description"><div></div><div class="data">Developed Salesforce visual pages, triggers, and Apex classes</div></div> -->
+          </div>
       </div>
       <div class="employment">
-        <table>
-            <tr>
-              <td class="company">Shaffer & Associates</td><td>Legal Associate</td><td class="dates-worked">Aug 2015 - April 2018</td><td class="location">Columbia, Missouri</td>
-            </tr>
-              <tr class="description"><td></td><td>Processed legal documentation and created new accounts in the system</td></tr>
-              <tr class="description"><td></td><td>Filed court documents and transcribed conversations with attorneys</td></tr>
-              <tr class="description"><td></td><td>Processed payments received from courts and employers</td></tr>
-            </table>
+            <div class="header">
+              <div class="header1">
+                <div class="company">Shaffer & Associates</div>
+                <div class="position">Legal Associate</div>
+              </div>
+              <div class="header2">
+              <div class="dates-worked">Aug 2015 - Apr 2018</div><div class="location">Columbia, Missouri</div>
+              </div>
+            </div>
+            <div class="table">
+              <div class="description"><div></div><div class="data">At this job, I started out in data entry, entering information from clients and court documents into our
+                debtmaster software. I then became the bankruptcy expert for the legal department, processing different bankruptcy court documents while also handling the
+                bankruptcy queue, monitoring the status of around 20 to 50 accounts per day.  On certain bankruptcy cases, I needed to be in contact with attorneys, clients,
+                 and courts to make sure our company can make the most money in the situations where we were usually unable to collect. I also got to process payments and
+                 file garnishments. Finally, I trained all new hires in the legal department on any of the previous tasks mentioned.</div></div>
+              <!-- <div class="description"><div></div><div class="data">Processed legal documentation and created new accounts in the system</div></div>
+              <div class="description"><div></div><div class="data">Filed court documents and transcribed conversations with attorneys</div></div>
+              <div class="description"><div></div><div class="data">Processed payments received from courts and employers</div></div> -->
+
+            </div>
         </div>
         <div class="employment">
-          <table>
-              <tr>
-                <td class="company">Hy-Vee</td><td>Cashier, Deli Clerk</td><td class="dates-worked">Feb 2013 - April 2018</td><td class="location">Columbia, Missouri</td>
-              </tr>
-                <tr class="description"><td></td><td>Worked directly with customers and other store departments to set up catering orders</td></tr>
-              </table>
+              <div class="header">
+                <div class="header1">
+                  <div class="company">Hy-Vee</div>
+                  <div class="position">Delicatessen Clerk</div>
+                </div>
+                <div class="header2">
+                <div class="dates-worked">Feb 2013 - Apr 2018</div><div class="location">Columbia, Missouri</div>
+                </div>
+              </div>
+              <div class="table">
+                <div class="description"><div></div><div class="data">The majority of what I did was customer service, making sure
+                  that the customer is happy and content with their order and experience because that is what we take pride in. 
+                  I trained new people, giving them direction on how to use their time efficiently while giving the customer proper service. </div></div>
+              </div>
           </div>
 </div>
