--- a/src/app/variables.sass
+++ b/src/app/variables.sass
@@ -1,4 +1,8 @@
-$nice-red-color: #a84047
+$nice-teal-color: #116466
+$white-green: #D1E8E2
+$tan-dark: #D9B08C
+$tan-light: #FFCB9A
+$dark-color: #2C3531
 $shadow-color: #15191f
 $break-small: 320px
 $break-large: 1200px
