--- a/src/app/components/work/work/work.component.sass
+++ b/src/app/components/work/work/work.component.sass
@@ -2,55 +2,111 @@
 
 
 
-tr
+div
   font-family: 'Hind Madurai', sans-serif
-  color: $nice-red-color
-  text-align: left
-  padding: 15px
-
-// div
-//   background-color: #2f3845
-//   box-shadow: 2px 2px 2px 2px $shadow-color
+  // color: $nice-teal-color
+  // text-align: left
 
 .employment
   width: 100%
-  text-align: left
-  margin: 4px
-  background-color: #2f3845
+  // text-align: left
+  background-color: $tan-light
+  margin-bottom: 5px
   box-shadow: 2px 2px 2px 2px $shadow-color
+  border-radius: 10px 10px 10px 10px
 
-td
+.data
   padding: 10px
+  text-align: left
+  color: $nice-teal-color
   @media screen and (max-width: $break-small)
-    font-size: 10px
+    font-size: 20px
   @media screen and (min-width: $break-large)
     font-size: 20px
 
-.location
-  text-align: right
-  width: 10%
+// .location
+//   @media screen and (max-width: $break-small)
+//     font-size: 15px
+//     width: 40%
+//   @media screen and (min-width: $break-large)
+//     font-size: 15px
+//     width: 30%
 
-.dates-worked
-  text-align: right
-  width: 10%
-
-.company
-  width: 30%
+.dates-worked, .location
   @media screen and (max-width: $break-small)
     font-size: 15px
+    width: 40%
   @media screen and (min-width: $break-large)
-    font-size: 30px
+    margin-bottom: 10px
+    font-size: 15px
+    width: 100%
 
-.description
-  font-size: 10px
-  text-align: left
-  width: 100%
-  column-span: 4
+.company
+  @media screen and (max-width: $break-small)
+    text-align: center
+    font-size: 25px
+    width: 50%
+  @media screen and (min-width: $break-large)
+    text-align: left
+    font-size: 30px
+    width: 75%
+
+// .description
+//   display: table-row
+//   font-size: 10px
+//   text-align: left
+//   width: 100%
 
 .main-work
+  // display: block
   @media screen and (max-width: $break-small)
-    margin-left: 0%
-    margin-right: 0%
+    margin-left: 2%
+    margin-right: 2%
   @media screen and (min-width: $break-large)
     margin-left: 20%
     margin-right: 20%
+
+.data
+  @media screen and (max-width: $break-small)
+    font-size: 20px
+    width: 100%
+  @media screen and (min-width: $break-large)
+    font-size: 20px
+    width: 100%
+
+.header
+  border-radius: 10px
+  color: $nice-teal-color
+  padding: 5px
+  background-color: $tan-dark
+  box-shadow: 2px 2px 1px 1px $shadow-color
+  color: black
+  @media screen and (max-width: $break-small)
+    display: flex
+    justify-content: space-around
+  @media screen and (min-width: $break-large)
+    display: flex
+    justify-content: space-between
+
+.header1, .header2
+  color: $nice-teal-color
+  // text-shadow: 1px 1px 1px $shadow-color
+  padding: 2px
+  @media screen and (max-width: $break-small)
+    display: flex
+    justify-content: flex-end
+  @media screen and (min-width: $break-large)
+    display: block
+    justify-content: space-between
+    width: 60%
+
+.table
+  padding-left: 5px
+  padding-right: 5px
+
+
+.position
+  @media screen and (max-width: $break-small)
+    text-align: center
+  @media screen and (min-width: $break-large)
+    text-align: left
