--- a/src/app/components/about-me/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me/about-me.component.html
@@ -1,5 +1,5 @@
 
-<div>
+<!-- <div>
   <p>I was born and raised where I reside currently, in Columbia, Missouri. My first experience with software development was when I was 16 years old, A sophomore in at Hickman high school.
     I enrolled in a course called C++ Programming, where I learned some fundamentals like recursion, sorting algorithms, and of course, how to program in C++. The next year, I enrolled in
     the class advanced C++ programming, where we took the Harvard cs50 course and got into teams and converted a boardgame into a C++ program using SFML for graphics. At this time, I thought
@@ -8,4 +8,86 @@
     the basics in the C language. This class made me remember  how much I loved problem solving and working with computers. This pushed me to change majors to Computer Science and continue
     and recieve my Bachelors in science in Computer Science at the University of Missouri
   </p>
-  </div>
+  </div> -->
+
+  <mat-expansion-panel [expanded]="true">
+    <mat-expansion-panel-header>
+      Technology and Tools I use daily
+    </mat-expansion-panel-header>
+    <mat-list>
+     <mat-list-item> <p> Java </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> SQL </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> Jira </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> Jenkins </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> Agile </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> Spring Web </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> Git </p> </mat-list-item>
+    </mat-list>
+  </mat-expansion-panel>
+
+  <mat-expansion-panel [expanded]="true">
+    <mat-expansion-panel-header>
+      Technology and Tools I use frequently
+    </mat-expansion-panel-header>
+    <mat-list>
+     <mat-list-item> <p> Talend </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> Angularjs </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> Typescript </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> HTML </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> Agile </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> Spring Web </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> SASS & CSS </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> Javascript </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> Firebase </p> </mat-list-item>
+    </mat-list>
+  </mat-expansion-panel>
+
+  <mat-expansion-panel [expanded]="true">
+    <mat-expansion-panel-header>
+      Technology and Tools I've frequently in the past
+    </mat-expansion-panel-header>
+    <mat-list>
+     <mat-list-item> <p> Salesforce </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> Apex </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> AWS EC2 </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> AWS S3 </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> Agile </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> Spring Web </p> </mat-list-item>
+    </mat-list>
+  </mat-expansion-panel>
+
+  <mat-expansion-panel [expanded]="true">
+    <mat-expansion-panel-header>
+      Technology and Tools I've used in school
+    </mat-expansion-panel-header>
+    <mat-list>
+     <mat-list-item> <p> jQuery </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> PHP </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> C </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> C++ </p> </mat-list-item>
+     <mat-divider></mat-divider>
+     <mat-list-item> <p> Swift </p> </mat-list-item>
+    </mat-list>
+  </mat-expansion-panel>
