--- a/src/app/components/about-me/about-me/about-me.component.sass
+++ b/src/app/components/about-me/about-me/about-me.component.sass
@@ -8,12 +8,22 @@ p
   text-indent: 20px
   font-size: 20px
 
-div
-  background-color: $tan-light
-  box-shadow: 2px 2px 2px 2px $shadow-color
+mat-expansion-panel-header
+  // background-color: #dbdbdb
+  color: black
+  background-color: $nice-teal-color
+  color: $white-green
+
+mat-expansion-panel
+  box-shadow: 2px 2px 2px 2px gray
+  background-color: white
+  margin-bottom: 10px
   @media screen and (max-width: $break-small)
     margin-left: 0%
     margin-right: 0%
   @media screen and (min-width: $break-large)
     margin-left: 20%
     margin-right: 20%
+
+mat-divider
+    border-color: $nice-teal-color
