--- a/src/app/components/header/header/header.component.sass
+++ b/src/app/components/header/header/header.component.sass
@@ -6,16 +6,17 @@ div
   border-width: 2px
   margin-left: 10%
   margin-right: 10%
+  margin-top: 10px
   box-shadow: 3px 3px 3px $shadow-color
 
 h1
   letter-spacing: 5px
   font-family: 'Alfa Slab One', cursive
   color: $nice-teal-color
-  text-shadow: 3px 3px 5px $shadow-color
+  text-shadow: 2px 2px 2px black
 
 h4
   letter-spacing: 5px
   font-family: 'Hind Madurai', sans-serif
-  color: $white-green
+  color: $nice-teal-color
   text-shadow: 3px 3px 5px $shadow-color
