matched ui colors with what I used in the about page

--- a/src/app/components/work/work/work.component.sass
+++ b/src/app/components/work/work/work.component.sass
@@ -4,14 +4,11 @@
 
 div
   font-family: 'Hind Madurai', sans-serif
-  // color: $nice-teal-color
-  // text-align: left
 
 .employment
   width: 100%
-  // text-align: left
-  background-color: $tan-light
-  margin-bottom: 5px
+  background-color: white
+  margin-bottom: 10px
   box-shadow: 2px 2px 2px 2px $shadow-color
   border-radius: 10px 10px 10px 10px
 
@@ -23,14 +20,6 @@ div
     font-size: 20px
   @media screen and (min-width: $break-large)
     font-size: 20px
-
-// .location
-//   @media screen and (max-width: $break-small)
-//     font-size: 15px
-//     width: 40%
-//   @media screen and (min-width: $break-large)
-//     font-size: 15px
-//     width: 30%
 
 .dates-worked, .location
   @media screen and (max-width: $break-small)
@@ -51,12 +40,6 @@ div
     font-size: 30px
     width: 75%
 
-// .description
-//   display: table-row
-//   font-size: 10px
-//   text-align: left
-//   width: 100%
-
 .main-work
   // display: block
   @media screen and (max-width: $break-small)
@@ -76,9 +59,8 @@ div
 
 .header
   border-radius: 10px
-  color: $nice-teal-color
   padding: 5px
-  background-color: $tan-dark
+  background-color: $nice-teal-color
   box-shadow: 2px 2px 1px 1px $shadow-color
   color: black
   @media screen and (max-width: $break-small)
@@ -89,8 +71,7 @@ div
     justify-content: space-between
 
 .header1, .header2
-  color: $nice-teal-color
-  // text-shadow: 1px 1px 1px $shadow-color
+  color: $white-green
   padding: 2px
   @media screen and (max-width: $break-small)
     display: flex
@@ -103,7 +84,6 @@ div
 .table
   padding-left: 5px
   padding-right: 5px
-
 
 .position
   @media screen and (max-width: $break-small)
