--- a/src/app/components/about-me/about-me/about-me.component.sass
+++ b/src/app/components/about-me/about-me/about-me.component.sass
@@ -9,13 +9,13 @@ p
   font-size: 20px
 
 mat-expansion-panel-header
-  // background-color: #dbdbdb
   color: black
   background-color: $nice-teal-color
   color: $white-green
 
 mat-expansion-panel
-  box-shadow: 2px 2px 2px 2px gray
+  box-shadow: 2px 2px 2px 2px $shadow-color
+  border-radius: 10px 10px 10px 10px
   background-color: white
   margin-bottom: 10px
   @media screen and (max-width: $break-small)
