--- a/src/app/components/about-me/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me/about-me.component.html
@@ -9,6 +9,7 @@
     and recieve my Bachelors in science in Computer Science at the University of Missouri
   </p>
   </div> -->
+  <app-main-about-me></app-main-about-me>
 
   <mat-expansion-panel [expanded]="true">
     <mat-expansion-panel-header>
