--- a/src/app/components/about-me/about-me/about-me.component.sass
+++ b/src/app/components/about-me/about-me/about-me.component.sass
@@ -10,8 +10,10 @@ p
 
 mat-expansion-panel-header
   color: black
+  font-size: 20px
   background-color: $nice-teal-color
   color: $white-green
+  box-shadow: 2px 2px 2px 2px $shadow-color
 
 mat-expansion-panel
   box-shadow: 2px 2px 2px 2px $shadow-color
