--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,3 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "src/app/variables.sass"
+
+
 body
   background-color: #2b3540
+
+.mat-form-field-label
+  color: $nice-teal-color !important
+
+.mat-form-field-underline
+  background-color: $nice-teal-color !important
