--- a/src/app/components/contact/contact/contact.component.sass
+++ b/src/app/components/contact/contact/contact.component.sass
@@ -1,6 +1,7 @@
 @import "../../../variables.sass"
+//@import url("https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css")
 
-.contact-form
+#contact-form
   display: flex
   flex-direction: column
   margin-left: 20%
@@ -22,3 +23,10 @@
 
 .mat-form-field-underline
   background-color: green !important
+
+button
+  width: 150px
+  margin: auto
+
+// .ng-valid[required], .ng-valid.required
+//   background-color: red
