--- a/src/app/components/header/header/header.component.sass
+++ b/src/app/components/header/header/header.component.sass
@@ -4,19 +4,20 @@ div
   border-style: solid
   border-color: $nice-teal-color
   border-width: 2px
-  margin-left: 10%
-  margin-right: 10%
+  margin-left: 20%
+  margin-right: 20%
   margin-top: 10px
   box-shadow: 3px 3px 3px $shadow-color
+  background-color: white
 
 h1
   letter-spacing: 5px
   font-family: 'Alfa Slab One', cursive
   color: $nice-teal-color
-  text-shadow: 2px 2px 2px black
+  // text-shadow: 2px 2px 2px black
 
 h4
   letter-spacing: 5px
   font-family: 'Hind Madurai', sans-serif
   color: $nice-teal-color
-  text-shadow: 3px 3px 5px $shadow-color
+  // text-shadow: 3px 3px 5px $shadow-color
