--- a/src/app/components/work/work/work.component.sass
+++ b/src/app/components/work/work/work.component.sass
@@ -22,21 +22,22 @@ div
     font-size: 20px
 
 .dates-worked, .location
+  // margin-top: 10px
   @media screen and (max-width: $break-small)
+    // margin-bottom: 0
     font-size: 15px
     width: 40%
   @media screen and (min-width: $break-large)
-    margin-bottom: 10px
+    text-align: right
     font-size: 15px
+    margin-top: 10px
     width: 100%
 
 .company
   @media screen and (max-width: $break-small)
-    text-align: center
     font-size: 25px
     width: 50%
   @media screen and (min-width: $break-large)
-    text-align: left
     font-size: 30px
     width: 75%
 
@@ -79,14 +80,18 @@ div
   @media screen and (min-width: $break-large)
     display: block
     justify-content: space-between
-    width: 60%
 
-.table
-  padding-left: 5px
-  padding-right: 5px
+// .header2
+//   margin-right: 10%
 
-.position
+// .table
+//   padding-left: 5px
+//   padding-right: 5px
+
+.position, .company
+  width: 100%
   @media screen and (max-width: $break-small)
     text-align: center
   @media screen and (min-width: $break-large)
     text-align: left
+    margin-left: 10%
