added firestore, reading work items resume-like from firestore, styling

--- a/src/app/components/work/work/work.component.sass
+++ b/src/app/components/work/work/work.component.sass
@@ -90,3 +90,14 @@ div
     text-align: center
   @media screen and (min-width: $break-large)
     text-align: left
+
+.spinner
+  display: flex
+  justify-content: center
+
+mat-card-title
+  display: flex
+  justify-content: space-between
+
+mat-card
+  margin-bottom: 20px
