--- a/src/app/components/header/header/header.component.sass
+++ b/src/app/components/header/header/header.component.sass
@@ -8,6 +8,7 @@ div
   margin-right: 10%
   margin-top: 10px
   box-shadow: 3px 3px 3px $shadow-color
+  text-align: center
 
 h1
   letter-spacing: 5px
