--- a/src/app/components/work/work/work.component.html
+++ b/src/app/components/work/work/work.component.html
@@ -1,3 +1,24 @@
+<div *ngIf="work; else loading">
+  <div *ngFor="let workItem of work; index as i;">
+    <mat-card>
+      <mat-card-title>
+        <div>{{workItem.workplace}}</div>
+        <div style="font-size: medium">
+          {{workItem.from | date:'MMMM y' }} to {{determineTo(workItem.to)}}
+        </div>
+      </mat-card-title>
+      <mat-card-subtitle>{{workItem.position}}</mat-card-subtitle>
+      <mat-card-content>
+        <app-work-description [id]="workItem.id"></app-work-description>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
+<ng-template #loading>
+  <div class="spinner">
+    <mat-spinner></mat-spinner>
+  </div>
+</ng-template>
 <div class="main-work">
   <div class="employment">
       <div class="header">
